# games_django

./: db.sqlite3  pyproject.toml
games_django/: asgi.py  settings.py  urls.py  wsgi.py
main/: urls.py  views.py
main/static/css/: base.css
main/templates/: base.html
user/: models.py
user/migrations/: 0001_initial.py
