[tool.poetry]
name = "games-django"
version = "0.1.0"
description = ""
authors = ["Kirill-Korzunov <kirillkorzunov@gmail.com>"]
readme = "README.md"
packages = [{include = "games_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
